--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2f13385d",
    "metadata": {},
    "outputs": [],
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "98417921",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Namaskar Vishwa"
+     ]
+    }
+   ],
    "source": [
     "cout << \"Namaskar Vishwa\";"
    ]
@@ -47,10 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b6e884dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int\tchar\tfloat\tdouble\tlong\tunsigned int\tstring\tbool\tshort\n",
+      "4\t1\t4\t8\t8\t4\t\t32\t1\t2"
+     ]
+    }
+   ],
    "source": [
     "int sizeof_int=sizeof(int);\n",
     "int sizeof_char=sizeof(char);\n",
@@ -75,10 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ae12ab48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5>3"
+     ]
+    }
+   ],
    "source": [
     "if(3>5){\n",
     "    cout<<\"3>5\";\n",
@@ -101,10 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6a6d6886",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 "
+     ]
+    }
+   ],
    "source": [
     "int i=0;\n",
     "while(i<=5)\n",
@@ -129,10 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b95d2274",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***\n",
+      "***\n",
+      "***\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1;\n",
     "while(row<=n){\n",
@@ -161,10 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f4257159",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111\n",
+      "222\n",
+      "333\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1;\n",
     "while(row<=n){\n",
@@ -193,10 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9f9eb17d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "123\n",
+      "123\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1;\n",
     "while(row<=n){\n",
@@ -225,12 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2556aeb9",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321\n",
+      "321\n",
+      "321\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1;\n",
     "while(row<=n){\n",
@@ -259,10 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "60f491be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "333\n",
+      "222\n",
+      "111\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1;\n",
     "while(row<=n){\n",
@@ -291,10 +374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c18330ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "456\n",
+      "789\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1,count=1;\n",
     "while(row<=n){\n",
@@ -324,10 +417,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2be6979e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "987\n",
+      "654\n",
+      "321\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1,count=n*n;\n",
     "while(row<=n){\n",
@@ -357,10 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a1041902",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "234\n",
+      "345\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -389,10 +502,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1bb00332",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1;\n",
     "while(row<=n){\n",
@@ -421,10 +544,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c6761d0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1;\n",
     "while(row<=n){\n",
@@ -453,10 +586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "88f10117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "23\n",
+      "456\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=3,count=1;\n",
     "while(row<=n){\n",
@@ -486,10 +629,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bd7dd240",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "45\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1,count=1;\n",
     "while(row<=n){\n",
@@ -519,10 +672,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9ecb1bd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "654\n",
+      "32\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3,row=1,count=n*(n+1)/2;\n",
     "while(row<=n){\n",
@@ -553,10 +716,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "da688aa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "23\n",
+      "345\n",
+      "4567\n"
+     ]
+    }
+   ],
    "source": [
     "// Way 1\n",
     "int n=4, row=1;\n",
@@ -574,10 +748,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3861e4ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "23\n",
+      "345\n",
+      "4567\n"
+     ]
+    }
+   ],
    "source": [
     "// Way 2\n",
     "int n=4, row=1;\n",
@@ -608,10 +793,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bc8f814f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "21\n",
+      "321\n",
+      "4321\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=n){\n",
@@ -640,10 +836,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "53989936",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAA\n",
+      "BBB\n",
+      "CCC\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3, row=1;\n",
     "\n",
@@ -675,10 +881,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fdc321f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "ABC\n",
+      "ABC\n"
+     ]
+    }
+   ],
    "source": [
     "// Way 1\n",
     "int n=3, row=1;\n",
@@ -697,10 +913,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d2f4da5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "ABC\n",
+      "ABC\n"
+     ]
+    }
+   ],
    "source": [
     "// Way 2\n",
     "int row=1, n=3;\n",
@@ -731,10 +957,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a7a1c41b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "DEF\n",
+      "GHI\n"
+     ]
+    }
+   ],
    "source": [
     "int n=3, row=1;\n",
     "char val='A';\n",
@@ -765,10 +1001,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "454debb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n",
+      "BCD\n",
+      "CDE\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -799,10 +1045,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2629e51e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BB\n",
+      "CCC\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -833,12 +1089,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4bbc125f",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BC\n",
+      "CDE\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -869,12 +1135,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ebad3f82",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BC\n",
+      "DEF\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;;\n",
     "char val='A';\n",
@@ -905,10 +1181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "4efcb982",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "AB\n",
+      "ABC\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=3;\n",
     "while(row<=n){\n",
@@ -940,10 +1226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "76e9be3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D\n",
+      "CD\n",
+      "BCD\n",
+      "ABCD\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -974,10 +1271,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "0beb02d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "34\n",
+      "234\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1007,12 +1315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1c106a32",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  **\n",
+      " ***\n",
+      "****\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1047,10 +1366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f0291618",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  22\n",
+      " 333\n",
+      "4444\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1085,12 +1415,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "a5485d0f",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  12\n",
+      " 123\n",
+      "1234\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1125,12 +1466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b3f4d317",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      " ***\n",
+      "  **\n",
+      "   *\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1165,12 +1517,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "b3396497",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234\n",
+      " 234\n",
+      "  34\n",
+      "   4\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1205,10 +1568,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "6f57c6f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1111\n",
+      " 222\n",
+      "  33\n",
+      "   4\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=4;\n",
     "while(row<=n){\n",
@@ -1242,10 +1616,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "67b4c72c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1\n",
+      " 23\n",
+      "456\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1,n=3,count=1;\n",
     "while(row<=n){\n",
@@ -1281,10 +1665,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "ed23756a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  121\n",
+      " 12321\n",
+      "1234321\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1324,10 +1719,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4ff92210",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  ***\n",
+      " *****\n",
+      "*******\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
@@ -1367,10 +1773,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "505b1d2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******\n",
+      " *****\n",
+      "  ***\n",
+      "   *\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=4){\n",
@@ -1410,10 +1827,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "837aafb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234321\n",
+      " 23421\n",
+      "  341\n",
+      "   4\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, row=1;\n",
     "while(row<=4){\n",
@@ -1454,10 +1882,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "f4b7656d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345*54321\n",
+      "1234***4321\n",
+      "123*****321\n",
+      "12*******21\n",
+      "1*********1\n"
+     ]
+    }
+   ],
    "source": [
     "int row=1, n=5;\n",
     "while(row<=n){\n",
@@ -1503,10 +1943,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "74339da8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      "*  *\n",
+      "*  *\n",
+      "****\n"
+     ]
+    }
+   ],
    "source": [
     "int n=4, r=1;\n",
     "    while(r<=n){\n",
@@ -1526,15 +1977,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a8f172ef",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9157097f",
+   "id": "fb51fc7a",
    "metadata": {},
    "outputs": [],
    "source": []
