--- a/Practice_CPP.ipynb
+++ b/Practice_CPP.ipynb
@@ -1,150 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "2f43a8a1",
-   "metadata": {},
-   "source": [
-    "#### Header"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2f13385d",
+   "id": "2f4f8553",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include <iostream>\n",
+    "#include<iostream>\n",
     "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6271617c",
-   "metadata": {},
-   "source": [
-    "#### Hello World"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "98417921",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Namaskar Vishwa"
-     ]
-    }
-   ],
-   "source": [
-    "cout << \"Namaskar Vishwa\";"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35d9c765",
-   "metadata": {},
-   "source": [
-    "#### Memory size of datatypes in Bytes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b6e884dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int\tchar\tfloat\tdouble\tlong\tunsigned int\tstring\tbool\tshort\n",
-      "4\t1\t4\t8\t8\t4\t\t32\t1\t2"
-     ]
-    }
-   ],
-   "source": [
-    "int sizeof_int=sizeof(int);\n",
-    "int sizeof_char=sizeof(char);\n",
-    "int sizeof_float=sizeof(float);\n",
-    "int sizeof_double=sizeof(double);\n",
-    "int sizeof_long=sizeof(long);\n",
-    "int sizeof_unsigned_int=sizeof(unsigned int);\n",
-    "int sizeof_string=sizeof(string);\n",
-    "int sizeof_bool=sizeof(bool);\n",
-    "int sizeof_short=sizeof(short);\n",
-    "cout<<\"int\\tchar\\tfloat\\tdouble\\tlong\\tunsigned int\\tstring\\tbool\\tshort\\n\";\n",
-    "cout<<sizeof_int<<\"\\t\"<<sizeof_char<<\"\\t\"<<sizeof_float<<\"\\t\"<<sizeof_double<<\"\\t\"<<sizeof_long<<\"\\t\"<<sizeof_unsigned_int<<\"\\t\\t\"<<sizeof_string<<\"\\t\"<<sizeof_bool<<\"\\t\"<<sizeof_short;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5d3f245",
-   "metadata": {},
-   "source": [
-    "#### Conditionals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ae12ab48",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5>3"
-     ]
-    }
-   ],
-   "source": [
-    "if(3>5){\n",
-    "    cout<<\"3>5\";\n",
-    "}\n",
-    "else if(3==5){\n",
-    "    cout<<\"3=5\";\n",
-    "}\n",
-    "else{\n",
-    "    cout<<\"5>3\";\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6373ff7f",
-   "metadata": {},
-   "source": [
-    "#### While loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6a6d6886",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 2 3 4 5 "
-     ]
-    }
-   ],
-   "source": [
-    "int i=0;\n",
-    "while(i<=5)\n",
-    "{\n",
-    "    cout<<i<<\" \";\n",
-    "    i++;\n",
-    "}"
    ]
   },
   {
@@ -162,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b95d2274",
    "metadata": {},
    "outputs": [
@@ -204,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f4257159",
    "metadata": {},
    "outputs": [
@@ -246,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "9f9eb17d",
    "metadata": {},
    "outputs": [
@@ -288,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2556aeb9",
    "metadata": {
     "scrolled": true
@@ -332,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "60f491be",
    "metadata": {},
    "outputs": [
@@ -374,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "c18330ea",
    "metadata": {},
    "outputs": [
@@ -417,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "2be6979e",
    "metadata": {},
    "outputs": [
@@ -460,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "a1041902",
    "metadata": {},
    "outputs": [
@@ -502,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "1bb00332",
    "metadata": {},
    "outputs": [
@@ -544,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "c6761d0f",
    "metadata": {},
    "outputs": [
@@ -586,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "88f10117",
    "metadata": {},
    "outputs": [
@@ -629,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "bd7dd240",
    "metadata": {},
    "outputs": [
@@ -672,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "9ecb1bd2",
    "metadata": {},
    "outputs": [
@@ -716,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "da688aa2",
    "metadata": {},
    "outputs": [
@@ -748,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "3861e4ab",
    "metadata": {},
    "outputs": [
@@ -793,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "bc8f814f",
    "metadata": {},
    "outputs": [
@@ -836,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "53989936",
    "metadata": {},
    "outputs": [
@@ -881,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "fdc321f3",
    "metadata": {},
    "outputs": [
@@ -913,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "d2f4da5c",
    "metadata": {},
    "outputs": [
@@ -957,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "a7a1c41b",
    "metadata": {},
    "outputs": [
@@ -1001,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "454debb3",
    "metadata": {},
    "outputs": [
@@ -1045,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "2629e51e",
    "metadata": {},
    "outputs": [
@@ -1089,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "4bbc125f",
    "metadata": {
     "scrolled": true
@@ -1135,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "ebad3f82",
    "metadata": {
     "scrolled": false
@@ -1181,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "4efcb982",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "76e9be3f",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "0beb02d5",
    "metadata": {},
    "outputs": [
@@ -1315,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "1c106a32",
    "metadata": {
     "scrolled": true
@@ -1366,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "f0291618",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "a5485d0f",
    "metadata": {
     "scrolled": true
@@ -1466,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "b3f4d317",
    "metadata": {
     "scrolled": true
@@ -1517,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "b3396497",
    "metadata": {
     "scrolled": true
@@ -1568,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "6f57c6f4",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "67b4c72c",
    "metadata": {},
    "outputs": [
@@ -1665,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "ed23756a",
    "metadata": {},
    "outputs": [
@@ -1719,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "4ff92210",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "505b1d2e",
    "metadata": {},
    "outputs": [
@@ -1827,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "837aafb9",
    "metadata": {},
    "outputs": [
@@ -1882,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "f4b7656d",
    "metadata": {},
    "outputs": [
@@ -1943,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "74339da8",
    "metadata": {},
    "outputs": [
@@ -1977,9 +1841,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01cc9769",
+   "metadata": {},
+   "source": [
+    "#### Pattern 38\n",
+    "<pre>\n",
+    "321\n",
+    "654\n",
+    "987\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e3a3a78a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321\n",
+      "654\n",
+      "987\n"
+     ]
+    }
+   ],
+   "source": [
+    "int i,j,n=3;\n",
+    "for(i=1;i<=3;i++)\n",
+    "{\n",
+    "    for(j=1;j<=3;j++)\n",
+    "    {\n",
+    "        cout<<n+i-j;\n",
+    "    }\n",
+    "    n=n+2;\n",
+    "    cout<<endl;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb51fc7a",
+   "id": "165a3b08",
    "metadata": {},
    "outputs": [],
    "source": []
