--- a/Learn_CPP.ipynb
+++ b/Learn_CPP.ipynb
@@ -1,6 +1,175 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "f4303952",
+   "metadata": {},
+   "source": [
+    "#### Header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "898f1e83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a40865ff",
+   "metadata": {},
+   "source": [
+    "#### Hello World"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "86bdcafe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Namaskar Vishwa"
+     ]
+    }
+   ],
+   "source": [
+    "cout << \"Namaskar Vishwa\";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b76a631",
+   "metadata": {},
+   "source": [
+    "#### Memory size of datatypes in Bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ccc964c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int\tchar\tfloat\tdouble\tlong\tunsigned int\tstring\tbool\tshort\n",
+      "4\t1\t4\t8\t8\t4\t\t32\t1\t2"
+     ]
+    }
+   ],
+   "source": [
+    "int sizeof_int=sizeof(int);\n",
+    "int sizeof_char=sizeof(char);\n",
+    "int sizeof_float=sizeof(float);\n",
+    "int sizeof_double=sizeof(double);\n",
+    "int sizeof_long=sizeof(long);\n",
+    "int sizeof_unsigned_int=sizeof(unsigned int);\n",
+    "int sizeof_string=sizeof(string);\n",
+    "int sizeof_bool=sizeof(bool);\n",
+    "int sizeof_short=sizeof(short);\n",
+    "cout<<\"int\\tchar\\tfloat\\tdouble\\tlong\\tunsigned int\\tstring\\tbool\\tshort\\n\";\n",
+    "cout<<sizeof_int<<\"\\t\"<<sizeof_char<<\"\\t\"<<sizeof_float<<\"\\t\"<<sizeof_double<<\"\\t\"<<sizeof_long<<\"\\t\"<<sizeof_unsigned_int<<\"\\t\\t\"<<sizeof_string<<\"\\t\"<<sizeof_bool<<\"\\t\"<<sizeof_short;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81ebb517",
+   "metadata": {},
+   "source": [
+    "#### Conditionals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "93473da7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5>3"
+     ]
+    }
+   ],
+   "source": [
+    "if(3>5){\n",
+    "    cout<<\"3>5\";\n",
+    "}\n",
+    "else if(3==5){\n",
+    "    cout<<\"3=5\";\n",
+    "}\n",
+    "else{\n",
+    "    cout<<\"5>3\";\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dd31bdb",
+   "metadata": {},
+   "source": [
+    "#### While loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d86e0f95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "int i=0;\n",
+    "while(i<=5)\n",
+    "{\n",
+    "    cout<<i<<\" \";\n",
+    "    i++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27ac1520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "C++17",
+   "language": "C++17",
+   "name": "xcpp17"
+  },
+  "language_info": {
+   "codemirror_mode": "text/x-c++src",
+   "file_extension": ".cpp",
+   "mimetype": "text/x-c++src",
+   "name": "c++",
+   "version": "17"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
