--- a/Practice_CPP.ipynb
+++ b/Practice_CPP.ipynb
@@ -1883,9 +1883,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70cf774b",
+   "metadata": {},
+   "source": [
+    "#### Pattern 39\n",
+    "<pre>\n",
+    "     *****\n",
+    "    *****\n",
+    "   *****\n",
+    "  *****\n",
+    " *****\n",
+    "*****\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "35f156b1",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      *****\n",
+      "     *****\n",
+      "    *****\n",
+      "   *****\n",
+      "  *****\n",
+      " *****\n"
+     ]
+    }
+   ],
+   "source": [
+    "char c[]=\"*****\";\n",
+    "int i,j;\n",
+    "for(i=0;i<=5;i++){\n",
+    "    for(j=5;j>=i;j--){\n",
+    "        cout<<' ';\n",
+    "    }\n",
+    "    cout<<c<<'\\n';\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "314f1851",
+   "metadata": {},
+   "source": [
+    "#### Pattern 40\n",
+    "<pre>\n",
+    "    1\n",
+    "   1 2\n",
+    "  1   2\n",
+    " 1     2\n",
+    "123456789\n",
+    "</pre>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "165a3b08",
+   "id": "f95500a0",
    "metadata": {},
    "outputs": [],
    "source": []
