--- a/Practice_CPP.ipynb
+++ b/Practice_CPP.ipynb
@@ -1947,11 +1947,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "7b997acc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    1    \n",
+      "   1 2   \n",
+      "  1   2  \n",
+      " 1     2 \n",
+      "123456789\n"
+     ]
+    }
+   ],
+   "source": [
+    "int n=9;\n",
+    "if(n%2!=0){\n",
+    "    int mid=n/2+n%2,i,j,counter=0;\n",
+    "    for(i=1;i<=mid;i++){\n",
+    "        for(j=1;j<=n;j++){\n",
+    "            if(i==mid){\n",
+    "                cout<<j;\n",
+    "            }\n",
+    "            else if(j==mid-counter){\n",
+    "                cout<<\"1\";\n",
+    "            }\n",
+    "            else if(j==mid+counter){\n",
+    "                cout<<\"2\";\n",
+    "            }\n",
+    "            else{\n",
+    "                cout<<\" \";\n",
+    "            }\n",
+    "        }\n",
+    "        counter++;\n",
+    "        cout<<'\\n';\n",
+    "    }\n",
+    "}\n",
+    "else{\n",
+    "    cout<<\"Enter odd number!!\";\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
