--- a/Practice_CPP.ipynb
+++ b/Practice_CPP.ipynb
@@ -1950,7 +1950,7 @@
    "execution_count": 44,
    "id": "7b997acc",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1958,9 +1958,9 @@
      "output_type": "stream",
      "text": [
       "    1    \n",
-      "   1 2   \n",
-      "  1   2  \n",
-      " 1     2 \n",
+      "   1 2\n",
+      "  1   2\n",
+      " 1     2\n",
       "123456789\n"
      ]
     }
@@ -1979,6 +1979,7 @@
     "            }\n",
     "            else if(j==mid+counter){\n",
     "                cout<<\"2\";\n",
+    "                break;\n",
     "            }\n",
     "            else{\n",
     "                cout<<\" \";\n",
